@@ -34,6 +34,7 @@ Features
 - Ipopt interface now supports warmstarts from a full primal/dual solution pair.
 - Extended data structure SCIP_ROWPREP and routines to assemble a linear inequality before it is turned into a SCIP row and
   made it available via the API.
+- Function branchcandCalcLPCands() now also returns fractional variables in unbounded solutions.
 
 Expressions:
 - Removed support for expression types min and max for now. Removed support for expression type sign.
